# cc-viewer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  cli.js  findcc.js  history.md  i18n.js  index.html  interceptor.js  package-lock.json  package.json  proxy.js  pty-manager.js  server.js  stats-worker.js  terminal-manager.js  updater.js  vite.config.js
.planning/: PROJECT.md  ROADMAP.md  STATE.md
concepts/: Tool-AskUserQuestion.md  Tool-Bash.md  Tool-Edit.md  Tool-EnterPlanMode.md  Tool-ExitPlanMode.md  Tool-Glob.md  Tool-Grep.md  Tool-NotebookEdit.md  Tool-Read.md  Tool-Skill.md  Tool-Task.md  Tool-TaskCreate.md  Tool-TaskGet.md  Tool-TaskList.md  Tool-TaskOutput.md  Tool-TaskStop.md  Tool-TaskUpdate.md  Tool-WebFetch.md  Tool-WebSearch.md  Tool-Write.md  Tool-executeCode.md  Tool-getDiagnostics.md  Tools.md
docs/: README.ar.md  README.da.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.no.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.zh-TW.md  README.zh.md  SDK-INTEGRATION.md  ccv-external-integration-options.md  ccv-external-sessions-protocol.md  plugins.md  plugins.zh.md
electron/: main.js
lib/: ask-bridge.js  context-watcher.js  delta-reconstructor.js  ensure-hooks.js  external-session-writer.js  (+9 more)
sdk-hooks/python/: README.md  pyproject.toml
sdk-hooks/python/cc_viewer_sdk/: __init__.py  core.py  proxy.py  utils.py
sdk-hooks/python/demo/: README.md  chat_demo.py  remote_demo.py
sdk-hooks/python/tests/: TEST_PLAN.md  test_debug.py  test_env_check.py  test_manual.py  test_remote.py
(+659 files in other folders)
